Bug 464102 - Segmentation fault running in WSL2 windows 10
Summary: Segmentation fault running in WSL2 windows 10
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR critical
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-10 15:16 UTC by Marco
Modified: 2023-02-04 02:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.4.7
Sentry Crash Report:


Attachments
strace output (583.78 KB, text/plain)
2023-01-10 15:16 UTC, Marco
Details
backtrace output (7.74 KB, text/plain)
2023-01-26 17:58 UTC, Marco
Details
backtrace output after tellico-dbgsym install (12.97 KB, text/plain)
2023-01-31 10:35 UTC, Marco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco 2023-01-10 15:16:31 UTC
Created attachment 155182 [details]
strace output

SUMMARY
***
launch application from command line: exit with "segmentation fault"
***


STEPS TO REPRODUCE
1. open ubuntu terminal from windows start menu
2. launch tellico
Nome SO	Microsoft Windows 10
Versione	10.0.19045 Build 19045

Description:    Ubuntu 20.04.5 LTS
Release:        20.04
Codename:       focal Pro

tellico/focal,now 3.2.3-1build1 amd64 [installed]




OBSERVED RESULT

Segmentation fault
EXPECTED RESULT
Tellico windows open

SOFTWARE/OS VERSIONS
Windows: 10.0.19045 Build 19045
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Robby Stephenson 2023-01-24 02:14:36 UTC
Are you able to submit a backtrace instead of strace output?
Comment 2 Marco 2023-01-26 17:58:55 UTC
Created attachment 155674 [details]
backtrace output

as per your request a backtrace is added
Comment 3 Robby Stephenson 2023-01-31 01:58:55 UTC
(In reply to Marco from comment #2)
> as per your request a backtrace is added

Thank you for providing that. Unfortunately, looks like the debug info for Tellico isn't installed so it doesn't give me any further help to debug the problem. Does Ubuntu provide dbg packages for the windows version? If so, can you generate another backtrace with the dbg package installed? And also confirm what version of Tellico you're using?
Comment 4 Marco 2023-01-31 10:35:19 UTC
Created attachment 155821 [details]
backtrace output after tellico-dbgsym install

sudo apt list tellico*
Listing... Done
tellico-data/focal,now 3.2.3-1build1 all [installed]
tellico-dbgsym/now 3.2.3-1build1 amd64 [installed,local]
tellico-doc/focal,now 3.2.3-1build1 all [installed]
tellico-scripts/focal,now 3.2.3-1build1 all [installed]
tellico/focal,now 3.2.3-1build1 amd64 [installed]
Comment 5 Robby Stephenson 2023-02-04 02:10:48 UTC
Git commit 2997f49bfde451dad86888f6f0244d6b6242ca2f by Robby Stephenson.
Committed on 04/02/2023 at 02:09.
Pushed by rstephenson into branch 'master'.

Verify UI language list is not empty before reading first item
FIXED-IN: 3.4.7

M  +4    -0    ChangeLog
M  +1    -1    src/fetch/fetchmanager.cpp

https://invent.kde.org/office/tellico/commit/2997f49bfde451dad86888f6f0244d6b6242ca2f
Comment 6 Robby Stephenson 2023-02-04 02:10:58 UTC
Git commit 578bcfc9e596c667fc62ad37bd8842ed65e92509 by Robby Stephenson.
Committed on 04/02/2023 at 02:10.
Pushed by rstephenson into branch '3.4'.

Verify UI language list is not empty before reading first item
FIXED-IN: 3.4.7

M  +4    -0    ChangeLog
M  +1    -1    src/fetch/fetchmanager.cpp

https://invent.kde.org/office/tellico/commit/578bcfc9e596c667fc62ad37bd8842ed65e92509
Comment 7 Robby Stephenson 2023-02-04 02:11:40 UTC
(In reply to Marco from comment #4)
> Created attachment 155821 [details]
> backtrace output after tellico-dbgsym install

Thanks! I believe it's fixed. I appreciate the backtrace.