Verify UI language list is not empty before reading first item

BUG: 464102
FIXED-IN: 3.4.7